[gd_scene load_steps=2 format=3 uid="uid://blpx6kb0t4ylq"]

[ext_resource type="Script" path="res://assets/interactables/event_volume.gd" id="1_78ekp"]

[node name="EventVolume" type="Area3D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_78ekp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
